# enbasics

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: document.yml  validate.yml
enbasics/: __init__.py
enbasics/badges/: __init__.py  badges.css  badges.py  common.py
enbasics/badges/test/: test_badges.py
enbasics/badges/test/samples/: badge.html  badges.html
enbasics/execution/: badges.py
enbasics/execution/test/: __init__.py  test_badges.py
enbasics/makefile/: __init__.py  makefile.py
enbasics/makefile/test/: __init__.py  test_makefile.py
enbasics/makefile/test/samples/: makefile.txt  makeout.txt
require/: package.txt
sphinx/: conf.py  enbasics.badges.html  enbasics.execution.html  enbasics.html  enbasics.makefile.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
sphinx/_modules/: index.html
sphinx/_modules/enbasics/badges/: badges.html
sphinx/_modules/enbasics/execution/: badges.html
sphinx/_modules/enbasics/makefile/: makefile.html
sphinx/_sources/: enbasics.badges.rst.txt  enbasics.execution.rst.txt  enbasics.makefile.rst.txt  enbasics.rst.txt  index.rst.txt  modules.rst.txt
sphinx/_static/: style.css
validate/: coverage.txt  flake8.txt  mypy.txt  pylint.txt  pytest.txt  ruff.txt  sphinx.txt  yamllint.txt
