


[project]

name = "enbasics"
description = "Enasis Network Project Basics"

readme = "README.md"

license.text = "MIT"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"]

requires-python = ">= 3.11"

dynamic = ["version", "dependencies"]



[project.urls]

Source = "https://github.com/enasisnetwork/enbasics"
Documentation = "https://enasisnetwork.github.io/enbasics/sphinx"



[tool.setuptools.dynamic]

version.attr = "enbasics.__version__"

dependencies.file = ["require/install.txt"]



[tool.setuptools.packages.find]

include = ["enbasics", "enbasics.*"]



[tool.ruff.lint.per-file-ignores]

"sphinx/conf.py" = ["E402"]



[project.optional-dependencies]

badges = [
  "python-dateutil",
  "wand",
  "weasyprint"]
